# buenos-aires-subway-passengers-flow

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
airflow/dags/: etl_caba_flow.py  test.py
dbt/models/core/: daily.sql
dbt/models/staging/: schema.yml  stg_data.sql
mage/caba-flow/: metadata.yaml
reports/: caba_flow.pbix
terraform/: main.tf  variables.tf
